# AI_Inference_Benchmarks_RTX600PRO_L40S

./: .gitignore  README.md  pyproject.toml
Inference Single/: docker compose SGLang.yaml  docker-compose TensorTRT.yaml
Local_Dockers_Without_Nats_Etcd/: docker_compose_ D_TRT_Local_2.yaml  docker_compose_D_TRT_Local_1.yaml  docker_compose_D_VLLM_Local_1.yaml  docker_compose_D_VLLM_Local_2.yaml
New_Benchmarks/: TRTLLM_inference_0215_1000_1024_1024.jsonl  TRTLLM_inference_0215_1000_sharegpt.jsonl  dynamo-trt-local_1_0214_1000_1024_1024.jsonl  dynamo-trt-local_1_0214_1000_sharegpt.jsonl  dynamo-trt-local_2_0214_1000_1024_1024.jsonl  dynamo-trt-local_2_0214_1000_sharegpt.jsonl  dynamo-trt_nats_etcd_1_0214_1000_1024_1024.jsonl  dynamo-trt_nats_etcd_1_0214_1000_sharegpt.jsonl  dynamo-trt_nats_etcd_4_0214_1000_1024_1024.jsonl  dynamo-trt_nats_etcd_4_0214_1000_sharegpt.jsonl  dynamo-vllm_nats_etcd_1_0214_1000_sharegpt.jsonl  dynamo-vllm_nats_etcd_1_0215_1000_1024_1024.jsonl  dynamo-vllm_nats_etcd_1_0215_1000_sharegpt.jsonl  dynamo-vllm_nats_etcd_4_0214_1000_sharegpt.jsonl  dynamo-vllm_nats_etcd_4_0215_1000_1024_1024.jsonl  dynamo-vllm_nats_etcd_4_0215_1000_sharegpt.jsonl  dynamo_vllm_local_2_0214_1000_1024_1024.jsonl  dynamo_vllm_local_2_vllm_0214_1000_sharegpt.jsonl  vllm_inference_single_0214_1000_1024_1024.jsonl  vllm_inference_single_0214_1000_sharegpt.jsonl
Server_Dockers_With_Nats_Etcd/: docker_compose_D_TRT_Nats_Etcd_1.yaml  docker_compose_D_TRT_Nats_Etcd_4.yaml  docker_compose_D_VLLM_Nats_Etcd_1.yaml  docker_compose_D_VLLM_Nats_Etcd_4.yaml  nats-server.conf
(+4 files in other folders)
